@@ -872,6 +872,7 @@
           --add-opens java.base/java.util=ALL-UNNAMED <!--System Lambda-->
           --add-opens java.base/java.util.concurrent=ALL-UNNAMED <!--PowerMock-->
           --add-opens java.base/sun.net=ALL-UNNAMED <!--netty.DnsResolverUtil-->
+          --add-opens java.base/java.time=ALL-UNNAMED <!-- java.time.Duration -->
           --add-opens java.management/sun.management=ALL-UNNAMED <!--JvmDefaultGCMetricsLogger & MBeanStatsGenerator-->
           --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED <!--MBeanStatsGenerator-->
         </test.additional.args>
